# dsd-feb-26-cohort

./: .env.example  erd.md
backend/: pyproject.toml
backend/src/api/: main.py
backend/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/api/auth/: dependencies.py  router.py  supabase_auth.py
backend/src/api/routes/: customer_requests.py  customers.py  distance.py  driver_manifest.py  drivers.py  garbage_routes.py  pullserviceloc.py  service_jobs.py  servicejobs.py  uploads.py
backend/src/model/: table.py
backend/src/services/: customer_requests_service.py  customers_service.py  distance_service.py  driver_manifest_service.py  driver_service.py  garbage_routes_service.py  pullserviceloc_service.py  service_jobs_service.py  servicejob_service.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: auth.ts  customerServiceJobs.ts  driverManifest.ts  signup.ts
frontend/src/assets/: mockCustomer.ts  mockData.ts  mockDriver.ts
frontend/src/components/: CustomerHeader.tsx  DriverDashHeader.tsx  DriverDashboard.tsx  LocationCard.tsx  Manifest.tsx  ManifestDetails.tsx  RouteDetails.tsx  RouteHealtCard.tsx  RouteHealthCard.tsx  RouteListCard.tsx  ServiceHistoryCard.tsx  ServiceIssuesCard.tsx  ServiceStatusCard.tsx  Sidebar.tsx  StopCard.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: CustomerPage.tsx  CustomerProofView.tsx  Dashboard.tsx  DriverManifest.tsx  SignupPage.tsx
frontend/src/types/: customer.ts  driver.ts  manifest.ts  signup.ts
(+4 files in other folders)
