[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.14",
    "supabase>=2.0.0",
    "python-multipart>=0.0.22",
]

[tool.uv]
package = true
